--- a/index.html
+++ b/index.html
@@ -271,6 +271,22 @@
 
         <script src="https://unpkg.com/3box/dist/3box.min.js"></script>
 
+	<!-- Matomo -->
+        <script type="text/javascript">
+            var _paq = window._paq || [];
+            /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+            _paq.push(['trackPageView']);
+            _paq.push(['enableLinkTracking']);
+            (function() {
+            var u="//tracking.totem.network/";
+            _paq.push(['setTrackerUrl', u+'matomo.php']);
+            _paq.push(['setSiteId', '3']);
+            var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+            g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+            })();
+        </script>
+        <!-- End Matomo Code -->
+
     <script type="text/javascript" src="runtime~app.0e4039530399391915cb.js" defer></script><script type="text/javascript" src="vendors~app.cd3ce55032c6e2816731.js" defer></script><script type="text/javascript" src="app.bec27f51fd40b4ea98f1.js" defer></script></body>
 
 </html>
